tdf#151979: fix crash in Text Grid dialog when switching active view

GetActiveView() may return a nullptr when previously we are in Calc
window and then click the controls on the writer dialog.

Change-Id: Ia4dcd58b19c40a3e6cd0a791b7645d5fd2dcb9f4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142508
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 9b80b2d6140d1aad240f10755105e49d678b98f1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142529
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>